src/main/java/com/example/MyBookShopApp/errors/SomethingWrongException.java
package com.example.MyBookShopApp.errors;

public class SomethingWrongException extends Exception {

    public SomethingWrongException(String message) {
        super(message);
    }
}
